--- a/public/footer.html
+++ b/public/footer.html
@@ -3,30 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Footer Navigation</title>
-  <script src="https://kit.fontawesome.com/YOUR_FONT_AWESOME_KIT.js" crossorigin="anonymous"></script>
+  <title>Footer - MyBusiness Premium</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    .footer { position: fixed; bottom: 30px; left: 0; width: 100%; background: #fff; border-top: 1px solid #ddd; display: flex; justify-content: space-around; padding: 5px 0; font-size: 0.7rem; z-index: 1000; }
-    .footer a { text-decoration: none; color: #333; text-align: center; flex: 1; }
-    .footer a i { display: block; font-size: 0.8rem; margin-bottom: 2px; font-weight: bold; }
-    .badge { position: absolute; top: -3px; right: 25%; background: red; border-radius: 50%; color: #fff; padding: 1px 4px; font-size: 0.6rem; }
-    .footer-extra { position: fixed; bottom: 0; left: 0; width: 100%; background: #000; text-align: center; padding: 3px 0; font-size: 0.7rem; color: #fff; z-index: 1100; }
+    footer {
+      background: #000;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+    }
+    #footerLinks a {
+      color: #fff;
+      margin: 0 10px;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
-  <footer class="footer" id="footerNav">
-    <a href="index.html"><i class="fas fa-home"></i>Home</a>
-    <a href="offers.html"><i class="fas fa-tags"></i>Offers</a>
-    <a href="analytics.html"><i class="fas fa-chart-line"></i>Analytics</a>
-    <a href="cart.html">
-      <i class="fas fa-shopping-cart"></i>Cart
-      <span id="cartCountFooter" class="badge">0</span>
-    </a>
-    <a href="support.html">
-      <i class="fas fa-headset"></i>Support
-    </a>
+  <footer id="siteFooter">
+    <div id="footerLinks"></div>
+    <p id="copyrightText">© 2025 MyBusiness. All rights reserved.</p>
   </footer>
-  <div class="footer-extra" id="footerExtra">&copy; 2025 MyBusiness. All rights reserved.</div>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <script>
@@ -41,19 +39,24 @@
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
-    db.collection("pages").doc("footer").get().then(doc => {
+    
+    db.collection("pages").doc("footer").onSnapshot((doc) => {
       if(doc.exists) {
-        const data = doc.data();
-        if(data.footerLinks && Array.isArray(data.footerLinks)) {
-          let linksHtml = "";
-          data.footerLinks.forEach(link => { linksHtml += `<a href="${link.url}">${link.text}</a>`; });
-          document.getElementById("footerNav").innerHTML = linksHtml;
-        }
-        if(data.copyrightText) {
-          document.getElementById("footerExtra").innerText = data.copyrightText;
-        }
+         const data = doc.data();
+         const footerLinksDiv = document.getElementById("footerLinks");
+         footerLinksDiv.innerHTML = "";
+         if(data.footerLinks && Array.isArray(data.footerLinks)) {
+           data.footerLinks.forEach(link => {
+             const a = document.createElement("a");
+             a.href = link.linkURL;
+             a.innerText = link.linkText;
+             footerLinksDiv.appendChild(a);
+           });
+         }
+         document.getElementById("copyrightText").innerText =
+           data.copyright || "© 2025 MyBusiness. All rights reserved.";
       }
-    }).catch(err => console.error("Error loading footer data:", err));
+    });
   </script>
 </body>
 </html>
