--- a/public/footer.html
+++ b/public/footer.html
@@ -1,62 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Footer - MyBusiness Premium</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>
-    footer {
-      background: #000;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
+<!-- footer.html -->
+<footer class="footer">
+  <a href="index.html"><i class="fas fa-home"></i>Home</a>
+  <a href="offers.html"><i class="fas fa-tags"></i>Offers</a>
+  <a href="analytics.html"><i class="fas fa-chart-line"></i>Analytics</a>
+  <a href="cart.html">
+    <i class="fas fa-shopping-cart"></i>Cart
+    <span id="cartCountFooter" class="badge">0</span>
+  </a>
+  <a href="support.html"><i class="fas fa-headset"></i>Support</a>
+</footer>
+
+<div class="footer-extra">
+  &copy; 2025 MyBusiness. All rights reserved.
+</div>
+
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+<script>
+  // Firebase configuration – replace with your actual config if needed
+  const firebaseConfig = {
+    apiKey: "AIzaSyBq9eDQru5rMMXZjQ4RYHcKSGkcgnnDJFw",
+    authDomain: "e-commerce-pk.firebaseapp.com",
+    projectId: "e-commerce-pk",
+    storageBucket: "e-commerce-pk.firebasestorage.app",
+    messagingSenderId: "126517093225",
+    appId: "1:126517093225:web:c2352620c6d32c582513f8",
+    measurementId: "G-2G2DNCNNT3"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  // Example: Update the cart count from Firestore (if you store it there)
+  db.collection("pages").doc("cart").onSnapshot((doc) => {
+    if (doc.exists) {
+      const data = doc.data();
+      // Assuming your Firestore "cart" document holds a field "cartCount"
+      document.getElementById("cartCountFooter").innerText = data.cartCount || 0;
+    } else {
+      // Fallback: get cart count from localStorage if needed
+      const count = localStorage.getItem("cartCount") || 0;
+      document.getElementById("cartCountFooter").innerText = count;
     }
-    #footerLinks a {
-      color: #fff;
-      margin: 0 10px;
-      text-decoration: none;
+  });
+
+  // Example: Update copyright text from Firestore
+  db.collection("pages").doc("footer").onSnapshot((doc) => {
+    if (doc.exists) {
+      const data = doc.data();
+      // Update the extra footer text if a copyright field is provided.
+      document.querySelector(".footer-extra").innerText = data.copyright || "© 2025 MyBusiness. All rights reserved.";
     }
-  </style>
-</head>
-<body>
-  <footer id="siteFooter">
-    <div id="footerLinks"></div>
-    <p id="copyrightText">© 2025 MyBusiness. All rights reserved.</p>
-  </footer>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBq9eDQru5rMMXZjQ4RYHcKSGkcgnnDJFw",
-      authDomain: "e-commerce-pk.firebaseapp.com",
-      projectId: "e-commerce-pk",
-      storageBucket: "e-commerce-pk.firebasestorage.app",
-      messagingSenderId: "126517093225",
-      appId: "1:126517093225:web:c2352620c6d32c582513f8",
-      measurementId: "G-2G2DNCNNT3"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    
-    db.collection("pages").doc("footer").onSnapshot((doc) => {
-      if(doc.exists) {
-         const data = doc.data();
-         const footerLinksDiv = document.getElementById("footerLinks");
-         footerLinksDiv.innerHTML = "";
-         if(data.footerLinks && Array.isArray(data.footerLinks)) {
-           data.footerLinks.forEach(link => {
-             const a = document.createElement("a");
-             a.href = link.linkURL;
-             a.innerText = link.linkText;
-             footerLinksDiv.appendChild(a);
-           });
-         }
-         document.getElementById("copyrightText").innerText =
-           data.copyright || "© 2025 MyBusiness. All rights reserved.";
-      }
-    });
-  </script>
-</body>
-</html>
+  });
+</script>
