--- a/public/footer.html
+++ b/public/footer.html
@@ -1,13 +1,12 @@
-<!-- footer.html -->
 <footer class="footer">
-  <a href="index.html"><i class="fas fa-home"></i>Home</a>
-  <a href="offers.html"><i class="fas fa-tags"></i>Offers</a>
-  <a href="analytics.html"><i class="fas fa-chart-line"></i>Analytics</a>
+  <a href="index.html"><i class="fas fa-home"></i> Home</a>
+  <a href="offers.html"><i class="fas fa-tags"></i> Offers</a>
+  <a href="analytics.html"><i class="fas fa-chart-line"></i> Analytics</a>
   <a href="cart.html">
-    <i class="fas fa-shopping-cart"></i>Cart
+    <i class="fas fa-shopping-cart"></i> Cart
     <span id="cartCountFooter" class="badge">0</span>
   </a>
-  <a href="support.html"><i class="fas fa-headset"></i>Support</a>
+  <a href="support.html"><i class="fas fa-headset"></i> Support</a>
 </footer>
 
 <div class="footer-extra">
@@ -17,7 +16,6 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 <script>
-  // Firebase configuration – replace with your actual config if needed
   const firebaseConfig = {
     apiKey: "AIzaSyBq9eDQru5rMMXZjQ4RYHcKSGkcgnnDJFw",
     authDomain: "e-commerce-pk.firebaseapp.com",
@@ -30,25 +28,34 @@
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
 
-  // Example: Update the cart count from Firestore (if you store it there)
   db.collection("pages").doc("cart").onSnapshot((doc) => {
     if (doc.exists) {
       const data = doc.data();
-      // Assuming your Firestore "cart" document holds a field "cartCount"
       document.getElementById("cartCountFooter").innerText = data.cartCount || 0;
     } else {
-      // Fallback: get cart count from localStorage if needed
       const count = localStorage.getItem("cartCount") || 0;
       document.getElementById("cartCountFooter").innerText = count;
     }
   });
 
-  // Example: Update copyright text from Firestore
   db.collection("pages").doc("footer").onSnapshot((doc) => {
-    if (doc.exists) {
+    if(doc.exists) {
       const data = doc.data();
-      // Update the extra footer text if a copyright field is provided.
-      document.querySelector(".footer-extra").innerText = data.copyright || "© 2025 MyBusiness. All rights reserved.";
+      const footerLinksDiv = document.getElementById("footerLinks");
+      if (footerLinksDiv) {
+        footerLinksDiv.innerHTML = "";
+        if(data.footerLinks && Array.isArray(data.footerLinks)) {
+          data.footerLinks.forEach(link => {
+            const a = document.createElement("a");
+            a.href = link.linkURL;
+            a.innerText = link.linkText;
+            a.style.marginRight = "15px";
+            footerLinksDiv.appendChild(a);
+          });
+        }
+      }
+      document.querySelector(".footer-extra").innerText =
+        data.copyright || "© 2025 MyBusiness. All rights reserved.";
     }
   });
 </script>
