--- a/public/analytics.html
+++ b/public/analytics.html
@@ -4,23 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Analytics - Purchase Decision Helper</title>
-  <!-- Bootstrap CSS for mobile responsiveness -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- FontAwesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <!-- Chart.js for graphical charts -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    /* General styling */
     body {
       font-family: Arial, sans-serif;
       background: #f7f7f7;
       margin: 0;
-      padding-top: 60px;  /* Extra top padding */
-      padding-bottom: 60px; /* Extra bottom padding */
-      overflow-x: hidden;  /* Prevent horizontal overflow */
+      padding-top: 60px;
+      padding-bottom: 60px;
+      overflow-x: hidden;
     }
-    /* Container styling for main content */
     .container {
       padding-top: 20px;
       padding-bottom: 20px;
@@ -38,12 +33,8 @@
   </style>
 </head>
 <body>
-  <!-- External Header -->
   <div id="header-placeholder"></div>
-
-  <!-- Main Content -->
   <div class="container">
-    <!-- Page Description -->
     <div class="row mb-4">
       <div class="col-12">
         <h2 class="section-title">Data-Driven Insights for Informed Purchases</h2>
@@ -52,8 +43,6 @@
         </p>
       </div>
     </div>
-
-    <!-- Overall Selling Trends Section -->
     <div class="row mb-4">
       <div class="col-12">
         <div class="card shadow-sm">
@@ -68,8 +57,6 @@
         </div>
       </div>
     </div>
-
-    <!-- Personalized Suggestions Section -->
     <div class="row">
       <div class="col-12">
         <div class="card shadow-sm">
@@ -77,40 +64,25 @@
             Personalized Product Suggestions
           </div>
           <div class="card-body">
-            <ul class="list-group" id="suggestions-list">
-              <!-- Suggestions will be dynamically inserted here -->
-            </ul>
+            <ul class="list-group" id="suggestions-list"></ul>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-  <!-- External Footer -->
   <div id="footer-placeholder"></div>
-
-  <!-- Bootstrap Bundle JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Load external header and footer from separate files
     document.addEventListener("DOMContentLoaded", function() {
-      fetch('header.html')
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById('header-placeholder').innerHTML = data;
-        })
-        .catch(error => console.error('Error loading header:', error));
-
-      fetch('footer.html')
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById('footer-placeholder').innerHTML = data;
-        })
-        .catch(error => console.error('Error loading footer:', error));
+      fetch('header.html').then(response => response.text()).then(data => {
+        document.getElementById('header-placeholder').innerHTML = data;
+      }).catch(console.error);
+      fetch('footer.html').then(response => response.text()).then(data => {
+        document.getElementById('footer-placeholder').innerHTML = data;
+      }).catch(console.error);
     });
 
-    // Dummy data for overall selling trends (to be replaced by Firebase integration)
     const ctx = document.getElementById('salesChart').getContext('2d');
     const salesChart = new Chart(ctx, {
       type: 'line',
@@ -133,19 +105,13 @@
           y: {
             beginAtZero: true,
             ticks: {
-              callback: function(value) {
-                return '$' + value;
-              }
+              callback: value => '$' + value
             }
           }
         }
       }
     });
 
-    /**
-     * Dummy function to simulate fetching personalized product suggestions.
-     * This will later be replaced by Firebase Firestore API calls for dynamic data and secure authentication.
-     */
     function fetchSuggestions() {
       return new Promise(resolve => {
         setTimeout(() => {
@@ -157,12 +123,10 @@
         }, 500);
       });
     }
-
-    // Render personalized suggestions in the suggestions list
     fetchSuggestions().then(suggestions => {
       const list = document.getElementById('suggestions-list');
       suggestions.forEach(item => {
-        const li = document.createElement('li');
+        const li = document.createElement("li");
         li.className = 'list-group-item';
         li.innerHTML = `<strong>${item.name}</strong>: ${item.desc}`;
         list.appendChild(li);
