--- a/public/support.html
+++ b/public/support.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    /* Basic styles for Support page */
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
     header, footer { background: #333; color: #fff; padding: 10px; text-align: center; }
     main { padding: 20px; }
@@ -21,12 +20,11 @@
     <h1 id="supportPageTitleElement">Support Default Title</h1>
     <h3 id="supportSubtitleElement">Default Support Subtitle</h3>
     <section class="faq" id="faqSection">
-      <!-- FAQ items will be rendered here dynamically -->
+      <!-- FAQ items will be rendered dynamically -->
     </section>
   </main>
   <footer id="siteFooter">© 2025 MyBusiness. All rights reserved.</footer>
   
-  <!-- Firebase and Firestore -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
   <script>
