--- a/public/analytics.html
+++ b/public/analytics.html
@@ -104,9 +104,7 @@
         scales: {
           y: {
             beginAtZero: true,
-            ticks: {
-              callback: value => '$' + value
-            }
+            ticks: { callback: value => '$' + value }
           }
         }
       }
