--- a/public/cart.html
+++ b/public/cart.html
@@ -222,8 +222,27 @@
         <i class="fas fa-trash-alt"></i>
         <div id="trash-count">0</div>
       </div>
-      <div id="cart-items"></div>
-      <div class="cart-total" id="cart-total">Total: Rs 0.00</div>
+      <div id="cart-items">
+        <!-- Dummy cart item example -->
+        <div class="cart-item">
+          <input type="checkbox" class="delete-checkbox" data-id="1">
+          <img src="https://via.placeholder.com/70" alt="Item 1">
+          <div class="cart-item-details">
+            <h3>Sample Item</h3>
+            <p>Price: Rs 100.00 | Qty: <span id="quantity-1">1</span></p>
+          </div>
+          <div class="quantity-vertical">
+            <button onclick="increaseQuantity('1')" title="Increase Quantity">
+              <i class="fas fa-plus"></i>
+            </button>
+            <span id="vertical-qty-1">1</span>
+            <button onclick="decreaseQuantity('1')" title="Decrease Quantity">
+              <i class="fas fa-minus"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="cart-total" id="cart-total">Total: Rs 100.00</div>
       <button class="checkout-button" id="checkout-button">Proceed to Checkout</button>
       <div class="receipt" id="detailed-receipt">
         <h2>Order Details</h2>
@@ -236,7 +255,15 @@
               <th>Line Total</th>
             </tr>
           </thead>
-          <tbody id="receipt-body"></tbody>
+          <tbody id="receipt-body">
+            <!-- Dummy order summary row -->
+            <tr>
+              <td>Sample Item</td>
+              <td>1</td>
+              <td>Rs 100.00</td>
+              <td>Rs 100.00</td>
+            </tr>
+          </tbody>
         </table>
       </div>
       <div class="token-section">
@@ -248,6 +275,7 @@
       </div>
     </main>
     <div id="footer-placeholder"></div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       let cartItems = JSON.parse(localStorage.getItem("cartItems")) || [];
