--- a/public/ecommerce.html
+++ b/public/ecommerce.html
@@ -52,6 +52,7 @@
         document.getElementById("ecomPageTitleElement").innerText = data.pageTitle || "E-commerce Default Title";
         document.getElementById("ecomHeroSubtitleElement").innerText = data.heroSubtitle || "Default Hero Subtitle for E-commerce.";
         document.getElementById("ecomHeroMedia").src = data.mediaURL || "default-ecom-video.mp4";
+        // Additional dynamic content such as carousel items can be rendered here.
       }
     });
   </script>
