--- a/public/ecommerce.html
+++ b/public/ecommerce.html
@@ -8,9 +8,15 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="style.css" />
     <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
     <!-- Page-Specific Inline CSS -->
     <style>
@@ -64,7 +70,7 @@
         background-color: #e68a00;
         transform: scale(1.05);
       }
-      /* CATEGORY NAVIGATION */
+      /* CATEGORY NAVIGATION (Below Hero) */
       #categoriesNav {
         margin: 20px 0;
       }
@@ -113,7 +119,7 @@
         border-radius: 8px;
         overflow: hidden;
         background: #fff;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         height: 150px;
       }
       .banner img {
@@ -214,12 +220,20 @@
         font-size: 0.75rem;
         color: #666;
       }
+      /* Stock status badge */
+      .stock-status {
+        margin-top: 4px;
+      }
+      .stock-status .badge {
+        font-size: 0.75rem;
+        padding: 4px 8px;
+      }
       @media (max-width: 576px) {
         .product-tile { min-width: 130px; }
         .product-tile .card img { height: 150px; }
       }
     </style>
-    
+
     <!-- Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
@@ -256,11 +270,11 @@
             // Use dummy data if Firestore returns nothing
             window.productData = {
               "Countdown Sales": [
-                { name: "Smartphone A", price: "PKR 894", description: "High-performance smartphone.", image: "https://via.placeholder.com/300x200?text=Smartphone+A", rating: 4.5, added: "500", sold: "3k" },
-                { name: "Smart TV B", price: "PKR 557", description: "4K Ultra HD Smart TV.", image: "https://via.placeholder.com/300x200?text=Smart+TV+B", rating: 4, added: "400", sold: "2.5k" },
-                { name: "Laptop C", price: "PKR 1,004", description: "Gaming laptop with high performance.", image: "https://via.placeholder.com/300x200?text=Laptop+C", rating: 4.5, added: "600", sold: "3.2k" }
+                { name: "Smartphone A", price: "PKR 894", description: "High-performance smartphone.", image: "https://via.placeholder.com/300x200?text=Smartphone+A", rating: 4.5, added: "500", sold: "3k", stock: 20 }
+              ],
+              "Discount Offers": [
+                { name: "Headphones D", price: "PKR 600", description: "Noise cancelling headphones.", image: "https://via.placeholder.com/300x200?text=Headphones+D", rating: 4, added: "350", sold: "2k", stock: 0 }
               ]
-              // ... add other categories as needed
             };
           }
           initCategoriesNav();
