--- a/public/admin_header.html
+++ b/public/admin_header.html
@@ -1,14 +1,80 @@
-<!-- In your admin file's body, at the very top: -->
-<div id="admin-header-placeholder"></div>
-
-<script>
-  function loadHTML(containerId, filePath) {
-    fetch(filePath)
-      .then(response => response.text())
-      .then(html => { document.getElementById(containerId).innerHTML = html; })
-      .catch(error => console.error("Error loading " + filePath, error));
-  }
-  document.addEventListener("DOMContentLoaded", function () {
-    loadHTML("admin-header-placeholder", "admin_header.html");
-  });
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Admin Header</title>
+  <style>
+    /* Admin Header Styles */
+    .admin-header {
+      background: #fff;
+      padding: 10px 15px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      display: flex;
+      flex-wrap: wrap; /* Allow wrapping on small screens */
+      align-items: center;
+      justify-content: space-between;
+    }
+    /* By default, on small screens, each section takes full width and centers its content */
+    .admin-header .left-section,
+    .admin-header .center-section,
+    .admin-header .right-section {
+      flex: 1 1 100%;
+      text-align: center;
+      margin: 5px 0;
+    }
+    /* On screens 768px and up, display in one row */
+    @media (min-width: 768px) {
+      .admin-header {
+        flex-wrap: nowrap;
+      }
+      .admin-header .left-section {
+        flex: 1;
+        text-align: left;
+        margin: 0;
+      }
+      .admin-header .center-section {
+        flex: 1;
+        text-align: center;
+        margin: 0;
+      }
+      .admin-header .right-section {
+        flex: 1;
+        text-align: right;
+        margin: 0;
+      }
+    }
+    .left-section {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .hamburger {
+      font-size: 1.5rem;
+      cursor: pointer;
+      color: #2c3e50;
+    }
+    .brand {
+      font-size: 1rem;
+      font-weight: bold;
+      color: #2c3e50;
+    }
+    .right-section button {
+      font-size: 0.8rem;
+      padding: 5px 10px;
+    }
+  </style>
+</head>
+<body>
+  <header class="admin-header">
+    <div class="left-section">
+      <i class="fas fa-bars hamburger" id="hamburger"></i>
+      <span class="brand">Faiqtech Sol</span>
+    </div>
+    <div class="center-section" id="pageTitle">Dashboard</div>
+    <div class="right-section">
+      <button class="btn btn-outline-secondary btn-sm"><i class="fas fa-user"></i> Admin</button>
+      <button class="btn btn-outline-danger btn-sm"><i class="fas fa-sign-out-alt"></i> Logout</button>
+    </div>
+  </header>
+</body>
+</html>
