--- a/public/admin_footer.html
+++ b/public/admin_footer.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Navigation Footer</title>
+  <title>Admin Footer</title>
   <style>
+    /* Admin Footer Navigation Styles */
     .admin-footer {
       position: fixed;
       bottom: 0;
