--- a/public/admin.html
+++ b/public/admin.html
@@ -52,6 +52,7 @@
     .content {
       flex: 1;
       padding: 15px;
+      padding-bottom: 70px;  /* Extra bottom padding to avoid overlap with footer */
       overflow-y: auto;
     }
     /* Dashboard Styles */
